# VoxycHistory

./: LICENSE  Q  README.md  SNAP
app/: LuaProgram.cpp  LuaProgram.h  VoxycApp.cpp  VoxycApp.h  main.cpp  main.h
assets/samples/: areagen.lua  randomtrees.lua
assets/samples/fps/: area1.sc  lights.lua  load.lua  orangelight.px  tick.lua
assets/samples/scrollingshooter/: 1.vx  2.vx  3.vx  4.vx  5.vx  building1.vx  computer.lua  expla1.px  expla2.px  expla3.px  expla4.px  expla5.px  expla6.px  expla7.px  expla8.px  explosions.lua  greenproj.px  load.lua  player.lua  player.px  projectiles.lua  qq.vx  redproj.px  sky1.px  spiral.ms  test.px  tick.lua  ufo1.px  wall1.px  wall2.px
assets/samples/tankgame/: tick.lua
assets/samples/tanks/: area1.sc  load.lua
docs/: Scripting Guide.txt  User Guide.txt
editor/: Editor.cpp  Editor.cpp___jb_old___  Editor.h  Editor2.cpp  Editor2.h  EditorOld.cpp  EditorOld.h  ModelEditor.cpp  ModelEditor.h  OrthoEditor.cpp  OrthoEditor.cpp___jb_old___  OrthoEditor.h
engine/: AndroidAudio.cpp  AndroidAudio.h  Audio.cpp  Audio.h  Batch.cpp  Batch.h  Batcher.cpp  Batcher.h  Billboarder.cpp  Billboarder.h  Camera.cpp  Camera.h  Common.h  Controls2.cpp  Controls2.h  CustomTris.cpp  CustomTris.h  DDLUtils.cpp  DDLUtils.hpp  EditorController.cpp  EditorController.h  Engine2.cpp  Engine2.h  FileIO.cpp  FileIO.h  Framebuffer.cpp  Framebuffer.h  GLIncludes.h  GUI.cpp  GUI.h  Globals.cpp  Globals.hpp  Grid.cpp  Grid.h  LuaBridge.cpp  LuaBridge.h  Mesh.cpp  Mesh.h  Model2.cpp  Model2.h  (+51 more)
platform/android/Voxyc/app/: .gitignore  CMakeLists.txt  build.gradle
platform/android/Voxyc/app/release/: output.json
platform/android/Voxyc/app/src/androidTest/java/com/voxyc/voxyc/: ExampleInstrumentedTest.java
platform/android/Voxyc/app/src/main/: AndroidManifest.xml
platform/android/Voxyc/app/src/main/cpp/: android.cpp  android.h  javagl.cpp  javagl.h  native-lib.cpp
platform/android/Voxyc/app/src/main/java/com/voxyc/voxyc/: AttrList.java  Attribute.java  BaseNode.java  CustomRenderer.java  CustomRendererES20.java  CustomSurfaceView.java  DDLUtils.java  HelloJni.java  LozowareOCListener.java  Node.java  RespondToNode.java  TileMap3D.java
platform/android/Voxyc/app/src/main/res/layout/: activity_main.xml
platform/android/Voxyc/app/src/main/res/values/: strings.xml
platform/android/Voxyc/app/src/test/java/com/voxyc/voxyc/: ExampleUnitTest.java
platform/android/Voxyc/gradle/wrapper/: gradle-wrapper.properties
platform/android/VoxycAIDE/: AndroidManifest.xml
platform/android/VoxycAIDE/jni/: Android.mk  Application.mk  hello-jni.cpp
platform/android/VoxycAIDE/libs/armeabi-v7a/: gdb.setup
platform/android/VoxycAIDE/res/values/: strings.xml
platform/android/VoxycAIDE/src/com/voxyc/voxyc/: AttrType.java  CustomRendererES20.java  CustomSurfaceView.java  DDLUtils.java  HelloJni.java  Palette.java  Tile.java
platform/ios/Voxyc/Voxyc/: AppDelegate.h  AppDelegate.m  IOSAudio.h  IOSAudio.mm  IOSGUI.cpp  IOSGUI.h  IOSGUI.hpp  IOSGUI.mm  ViewController.h  ViewController.mm  ios.cpp  main.m  osx.cpp
platform/ios/Voxyc/Voxyc.xcodeproj/: project.pbxproj
platform/ios/Voxyc/Voxyc.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
platform/ios/Voxyc/Voxyc.xcodeproj/project.xcworkspace/xcuserdata/dimitri.xcuserdatad/: UserInterfaceState.xcuserstate
platform/ios/Voxyc/Voxyc.xcodeproj/project.xcworkspace/xcuserdata/dimitri.xcuserdatad/xcdebugger/: Expressions.xcexplist
platform/ios/Voxyc/Voxyc.xcodeproj/project.xcworkspace/xcuserdata/dimitrilozovoy.xcuserdatad/: UserInterfaceState.xcuserstate
platform/ios/Voxyc/Voxyc.xcodeproj/xcuserdata/dimitri.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
platform/ios/Voxyc/Voxyc.xcodeproj/xcuserdata/dimitri.xcuserdatad/xcschemes/: Voxyc.xcscheme  xcschememanagement.plist
platform/ios/Voxyc/Voxyc/Base.lproj/: Main.storyboard
platform/macos/Voxyc/Voxyc/: main.cpp  osx.cpp
platform/macos/Voxyc/Voxyc.xcodeproj/: project.pbxproj
platform/macos/Voxyc/Voxyc.xcodeproj/project.xcworkspace/xcuserdata/dimitrilozovoy.xcuserdatad/: UserInterfaceState.xcuserstate
platform/macos/Voxyc/Voxyc.xcodeproj/project.xcworkspace/xcuserdata/dimitrilozovoy.xcuserdatad/xcdebugger/: Expressions.xcexplist
platform/macos/Voxyc/Voxyc.xcodeproj/xcshareddata/xcschemes/: Voxyc.xcscheme
platform/macos/Voxyc/Voxyc.xcodeproj/xcuserdata/dimitrilozovoy.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
platform/macos/Voxyc/Voxyc.xcodeproj/xcuserdata/dimitrilozovoy.xcuserdatad/xcschemes/: xcschememanagement.plist
platform/macos/Voxyc/Voxyc/engine/: PointRenderer.cpp
platform/macos/Voxyc/Voxyc/lib/: libGLEW.2.1.0.dylib  libglfw.3.3.dylib
platform/windows/Voxyc/: .gitignore  Output-Debug.txt  UpgradeLog.htm  Voxyc.sln
platform/windows/Voxyc/Release/: Voxyc.ipdb
platform/windows/Voxyc/Voxyc/: .gitignore  ReadMe.txt  Voxyc.cpp  Voxyc.vcxproj  Voxyc.vcxproj.filters  config.ini  drumstr.ini  stdafx.cpp  voxyc.ini  windows.cpp
platform/windows/Voxyc/Voxyc/Release/: Voxyc.pch
platform/windows/Voxyc/Voxyc/Release/Voxyc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Voxyc.lastbuildstate  Voxyc.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
platform/windows/Voxyc/Voxyc/lib/: OpenAL32.lib  assimp-vc140-mt.lib
tools/DataUtil/: DataUtil.cpp  DataUtil.sln  DataUtil.vcxproj  DataUtil.vcxproj.filters
